# Distributed-File-Grid

./: .clangd  .gitignore  BUILD_SUCCESS_REPORT.md  CMakeLists.txt  Dockerfile  Dockerfile.cluster-server  Dockerfile.head-server  Dockerfile.health-checker  FINAL_TEST_REPORT.md  Makefile  README.md  README_DOCKER.md  ZOOKEEPER_DOCKER_IMPLEMENTATION.md  ZOOKEEPER_TEST_RESULTS.md  docker-compose.yml  docker-test.sh  notes  test_system.sh  test_zookeeper.sh
Distributed-File-Grid/: quick-docker-test.sh
UnitTesting/: CMakeLists.txt  optimized_heartbeat_test.cpp  simple_heartbeat_test.cpp  test_heartbeat.cpp
config/: cluster_server_config.json  head_server_config.json  health_checker_config.json
doc/: heartbeat_server.md
doc/grafana/: dashboard.json
docker/: healthcheck.sh  prometheus.yml  start-services.sh  zoo.cfg
include/: heat_beat.pb.cc  heat_beat.pb.h  system_resources.cpp
nginx/: nginx.conf
noob_coe/: testing.cpp
protos/: chunk_server.proto  file_deatils.proto  heat_beat.proto
scripts/: start_services.sh  status.sh  stop_services.sh
src/: CMakeLists.txt  main.cpp
src/Cluster_Server/: async_file_recv.cpp  cluster_server.cpp  metrics_exporter.cpp  metrics_exporter.hpp  optimized_heartbeat_server.cpp  optimized_heartbeat_server.hpp  server_config.cpp
src/Head_Server/: asyc_file_recv_to_chunks.cpp  chunck_read_to_file.cpp  head_server.cpp  redis_handler.hpp
src/Head_server/: asyncio.hpp  head_server.cpp  head_server.hpp  server_config.cpp
src/Health_Checker/: health_checker.cpp
src/ZooKeeper_HealthChecker/: zk_head_server_monitor.cpp
src/include/: cluter_attach.hpp  file_search.cpp  file_search.hpp  heart_beat_signal.hpp  machine_details.hpp  metadata_manager.cpp  metadata_manager.hpp  redis_client.cpp  redis_client.hpp  request_server.hpp  system_info.hpp  system_resources.cpp  system_resources.hpp  version.h
src/protos/v1/: heart_beat.proto
src/protos/v1/generate/: heart_beat.pb.cc  heart_beat.pb.h
website/: package.json
website/Dashboard/: Dashboard.jsx  client.html
website/public/: index.html
website/src/: index.js
